--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-  {{>navbar data=details}}
-  {{>slider slides=slides}}
+  {{>navbar det=details}}
+  {{>slider sli=slides}}
 
   {{!-- banner 1 section --}}
   <section class="banner1_section banner1background text-white py-5">
@@ -47,7 +47,7 @@
       <h1 class="text-center text-dark">Famous Esports Titles In India</h1>
       <div class="row mt-5">
         {{!-- first game column --}}
-        {{#each game}}
+        {{#each games}}
         <div class="col-md-4 py-3">
           <div class="card">
             <div class="card-body">
